# OpenCC

./: README-ANDROID.md  build-android.sh
android-example/: CMakeLists.txt  OpenCCConverter.java  opencc_jni.cpp
